--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-{{Nivkh}}: `apertium-niv`
+Nivkh: `apertium-niv`
 ===============================================================================
 
 This is an Apertium monolingual language package for Nivkh. What
@@ -17,6 +17,7 @@ You will need the following software installed:
 * apertium (>= 3.3.0)
 * vislcg3 (>= 0.9.9.10297)
 * hfst (>= 3.8.2)
+* lexd
 
 If this does not make any sense, we recommend you look at: www.apertium.org.
 
