--- a/README
+++ b/README
@@ -19,7 +19,7 @@ You will need the following software installed:
 * hfst (>= 3.8.2)
 * lexd
 
-If this does not make any sense, we recommend you look at: www.apertium.org.
+If this does not make any sense, we recommend you look at: apertium.org.
 
 Compiling
 -------------------------------------------------------------------------------
@@ -72,9 +72,9 @@ Files and data
 For more information
 -------------------------------------------------------------------------------
 
-* http://wiki.apertium.org/wiki/Installation
-* http://wiki.apertium.org/wiki/apertium-niv
-* http://wiki.apertium.org/wiki/Using_an_lttoolbox_dictionary
+* https://wiki.apertium.org/wiki/Installation
+* https://wiki.apertium.org/wiki/apertium-niv
+* https://wiki.apertium.org/wiki/Using_an_lttoolbox_dictionary
 
 Help and support
 -------------------------------------------------------------------------------
@@ -82,6 +82,6 @@ Help and support
 If you need help using this language pair or data, you can contact:
 
 * Mailing list: apertium-stuff@lists.sourceforge.net
-* IRC: `#apertium` on irc.freenode.net (irc://irc.freenode.net/#apertium)
+* IRC: `#apertium` on irc.oftc.net (irc://irc.oftc.net/#apertium)
 
 See also the file [`AUTHORS`](AUTHORS), included in this distribution.
